fix spacing and line height

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,7 +43,7 @@ body {
   /* Adjust the value as needed */
 }
 .custom-spacing {
-  word-spacing: 0.5em; /* Adjust the value to increase or decrease spacing */
+  word-spacing: 0.3em; /* Adjust the value to increase or decrease spacing */
 }
 .underline-animation {
   position: relative;
